// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render component 1`] = `
<tr>
  <td
    className="table-cell-expand"
  >
    <div
      className="table-list-title"
    >
      <span
        className="text-truncate-inline"
      >
        <span
          title="Process test"
        >
          Process test
        </span>
      </span>
    </div>
  </td>
  <td>
    10 items
  </td>
  <td>
    5
  </td>
  <td>
    5
  </td>
</tr>
`;

exports[`Should render component with 1 instance count 1`] = `
<tr>
  <td
    className="table-cell-expand"
  >
    <div
      className="table-list-title"
    >
      <span
        className="text-truncate-inline"
      >
        <span
          title="Process test"
        >
          Process test
        </span>
      </span>
    </div>
  </td>
  <td>
    1 item
  </td>
  <td>
    5
  </td>
  <td>
    5
  </td>
</tr>
`;
